# django-ca-cmc

./: .gitignore  Dockerfile  README.md  compose.override.yaml  pyproject.toml
.github/workflows/: lint.yaml  mypy.yaml  test.yaml  wheel.yaml
conf/: 20-django-ca-cmc.yaml
demo/demo/: settings.py
django_ca_cmc/: admin.py  apps.py  cmc.py  conf.py  constants.py  models.py  urls.py  utils.py  views.py
django_ca_cmc/management/commands/: cmc_add_client.py
django_ca_cmc/migrations/: 0001_initial.py
tests/: __init__.py  conftest.py  settings.py  test_utils.py  test_views.py  urls.py  utils.py
tests/files/: cmc_with_crmf  cmc_with_csr  cmc_with_invalid_signature
tests/management/commands/: test_cmc_add_client.py
