[project]
name = "django-ca-cmc"
version = "0.1.0"
description = "django-ca plugin for Certificate Management over CMS (CMC)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-ca>=2.1.1",
    "python-cmc>=1.22",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.9.2",
]
